--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@apollo/client": "^3.10.8",
         "@gsap/react": "^2.1.1",
+        "@heroicons/react": "^2.1.5",
         "animejs": "^3.2.2",
         "aos": "^2.3.4",
         "date-fns": "^3.6.0",
