--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
-        "build": "next build",
+        "build": "npm run partytown && next build",
         "start": "node server.js",
-        "lint": "next lint"
+        "lint": "next lint",
+         "partytown": "partytown copylib public/~partytown"
     },
     "dependencies": {
         "@apollo/client": "^3.10.8",
