--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
         "@builder.io/partytown": "^0.10.2",
         "@gsap/react": "^2.1.1",
         "@heroicons/react": "^2.1.5",
+        "@next/third-parties": "^14.2.8",
         "animejs": "^3.2.2",
         "aos": "^2.3.4",
         "date-fns": "^3.6.0",
         "framer-motion": "^11.2.10",
         "graphql": "^16.9.0",
         "html-to-text": "^9.0.5",
-        "next": "14.2.4",
+        "next": "^14.2.8",
         "react": "^18",
         "react-animated-cursor": "^2.11.2",
         "react-day-picker": "^8.10.1",
